# bpoe_events_db_handler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: .env.template  Dockerfile  DockerfileDB  docker-compose-mongo-pg.yml  docker-compose.yml  init_alembic.sh  mongo-init.js
docs/: 01_ADR-orm_library.md  02_ADR-mongo_connector_to_asynch_refacor.md
src/: conf_logger.py  main.py
src/api/: dependencies.py  exceptions.py  routers.py  schemas.py
src/config/: config.py  lifespan.py
src/core/: models.py
src/core/documentstorage/: exceptions.py  models.py  utils.py
src/core/pool/: utils.py
src/core/pool/psycopg2_con/: utils.py
src/core/relationaldb/: exceptions.py  utils.py
src/core/relationaldb/_deprecated/sqlalchemy_con/: DEPRECATED.md  utils.py
src/core/relationaldb/migration_alembic/: __init__.py  alembic.ini  utils.py
src/core/relationaldb/migration_alembic/migrations/: env.py
src/core/relationaldb/migration_alembic/migrations/versions/: 321072f98829_initial.py  3c828a8d7238_initial.py  c699159f699c_initial.py
src/core/relationaldb/migration_connector/: alembic.ini  utils.py
src/core/relationaldb/migration_connector/migrations/: env.py
src/core/relationaldb/models/: exceptions.py  models.py  schemas.py
src/core/relationaldb/psycopg2_con/: exceptions.py  utils.py
src/core/relationaldb/psycopg2_con/repositories/: events.py
src/core/relationaldb/repositories/: events.py  exceptions.py
tests/: .env.test
tests/result/: pytest_result.xml
